fix: fixed overflow in navbar

--- a/equathora/src/components/Dropdown.css
+++ b/equathora/src/components/Dropdown.css
@@ -3,6 +3,7 @@
     display: flex;
     height: 84px;
     margin-left: 40px;
+    z-index: 1001;
 }
 
 .dropbtn {
@@ -35,7 +36,7 @@
     box-shadow: 0 10px 12px rgba(0, 0, 0, 0.2);
     font-family: 'Public Sans', sans-serif;
     border-radius: 5px 5px 10px 10px;
-    z-index: 900;
+    z-index: 1002;
     transition: opacity 0.2s ease, visibility 0.2s ease, transform 0.2s ease;
 }
 
@@ -120,8 +121,21 @@
 }
 
 @media only screen and (min-width: 992px)and (max-width: 1199px) {
+    .dropdown {
+        margin-left: 20px;
+    }
+
+    .dropdown-content {
+        min-width: 320px;
+    }
+
     #navbar-right .dropdown .dropdown-content {
         right: -10px;
-        min-width: 360px;
+        min-width: 320px;
+    }
+
+    .dropbtn {
+        font-size: 16px;
+        padding: 0 8px;
     }
 }
