--- a/equathora/src/components/Navbar.css
+++ b/equathora/src/components/Navbar.css
@@ -1,12 +1,18 @@
 #navbar {
-    min-width: 100%;
+    width: 100%;
+    max-width: 100vw;
     background-color: var(--main-color);
     height: 9vh;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    position: static;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    overflow: visible;
+    box-sizing: border-box;
 }
 
 #navbar-left {
@@ -14,6 +20,9 @@
     justify-content: flex-start;
     align-items: center;
     list-style: none;
+    flex: 1;
+    min-width: 0;
+    overflow: visible;
 }
 
 #navbar-logo {
@@ -57,6 +66,7 @@
     align-items: center;
     list-style: none;
     height: 9vh;
+    overflow: visible;
 }
 
 #avatarIMG {
@@ -70,11 +80,10 @@
 }
 
 #nb-sb {
-    width: 40%;
-    height: auto;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    flex-shrink: 0;
 }
 
 #sidebar-icon {
@@ -107,6 +116,31 @@
 
 .hide-navbar {
     padding-left: 1rem;
+    flex-shrink: 0;
+}
+
+/* Large devices (laptops/desktops, 992px to 1199px) - Critical breakpoint */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    #navbar {
+        padding: 0 20px;
+    }
+
+    .hide-navbar {
+        padding-left: 0.5rem;
+    }
+
+    .dropdown {
+        margin-left: 20px;
+    }
+
+    #navbar-name {
+        font-size: 1.3rem;
+    }
+
+    #navbar-logo {
+        height: 70px;
+        width: 70px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
