--- a/equathora/src/index.css
+++ b/equathora/src/index.css
@@ -33,10 +33,28 @@
     /*Dark Accent Color*/
   }
 }
+
 * {
   box-sizing: border-box;
   margin: 0;
   /* border: 2px solid skyblue; */
+}
+
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+#root {
+  overflow-x: hidden;
+  width: 100%;
 }
 
 a {
@@ -44,6 +62,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 /* 
 :focus {
   outline: 2px solid #007cba;
